--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,19 @@
     background-color: var(--light-background-color);
  }
 
+ ul {
+   margin: 0;
+   padding-left: 0;
+ }
+
+ .container {
+   width: 1200px;
+   padding-left: 15px;
+   padding-right: 15px;
+   outline: 3px solid royalblue;
+   margin-left: auto;
+   margin-right: auto;
+ }
 /* -----------------HEADER--------------------- */
 
 .logo {
@@ -33,6 +46,8 @@ font-size: 26px;
 line-height: 1.19;
 color: var(--accent-color);
 text-decoration: none;
+outline: 3px solid red;
+margin-right: 94px;
 }
 
 .logo-dark {
@@ -53,6 +68,8 @@ color: var(--logo-text-color);
    line-height: 1.14;
    letter-spacing: 0.02em;
    color: var(--second-text-color);
+   outline: 3px solid red;
+   margin-right: 50px;
 }
 
 .navigation.current {
@@ -64,6 +81,8 @@ color: var(--logo-text-color);
    line-height: 1.14;
    letter-spacing: 0.02em;
    color: inherit;
+   outline: 3px solid red;
+   margin-left: 50px;
 }
 
 .navigation:hover,
@@ -75,7 +94,10 @@ color: var(--logo-text-color);
 
 /* -----------------HERO--------------------- */
 
- .hero {background-color: var(--dark-background-color);}
+ .hero {
+   background-color: var(--dark-background-color);
+   padding: 200px 0;
+}
 
  .hero-title {
    font-weight: 900;
@@ -85,6 +107,8 @@ color: var(--logo-text-color);
    letter-spacing: 0.06em;
    text-transform: uppercase;
    color: var(--light-text-color);
+   width: 696px;
+   margin: 0 auto 30px auto;
  }
 
 .hero-button {
@@ -102,6 +126,8 @@ color: var(--logo-text-color);
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
+    margin: 0 auto;
+    padding: 10px 32px;
  }
 
  .hero-button:hover,
