--- a/css/styles.css
+++ b/css/styles.css
@@ -1,268 +1,298 @@
 :root {
-    --main-text-color: #757575;
-    --second-text-color: #212121;
-    --light-text-color:#FFFFFF;
-    --semi-light-text-color: rgba(255, 255, 255, 0.6);
-    --accent-color: #2196F3;
-    --btn-accent-color: #188CE8;
-    --logo-text-color: #000000;
-    --dark-background-color: #2F303A;
-    --light-background-color:#FFFFFF;
-    --semi-light-background-color: #F5F4FA;
-    --line-color: #ECECEC;
-    --border-color: #EEEEEE;
-    --main-font: 'Roboto', sans-serif;
-    --logo-font: 'Raleway', sans-serif;
+  --main-text-color: #757575;
+  --second-text-color: #212121;
+  --light-text-color: #ffffff;
+  --semi-light-text-color: rgba(255, 255, 255, 0.6);
+  --accent-color: #2196f3;
+  --btn-accent-color: #188ce8;
+  --logo-text-color: #000000;
+  --dark-background-color: #2f303a;
+  --light-background-color: #ffffff;
+  --semi-light-background-color: #f5f4fa;
+  --line-color: #ececec;
+  --border-color: #eeeeee;
+  --main-font: 'Roboto', sans-serif;
+  --logo-font: 'Raleway', sans-serif;
 }
- 
- body {
-    font-family: var(--main-font); 
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--main-text-color);
-    background-color: var(--light-background-color);
- }
 
- ul {
-   margin: 0;
-   padding-left: 0;
- }
+body {
+  font-family: var(--main-font);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+  background-color: var(--light-background-color);
+}
 
- .container {
-   width: 1200px;
-   padding-left: 15px;
-   padding-right: 15px;
-   outline: 3px solid royalblue;
-   margin-left: auto;
-   margin-right: auto;
- }
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+
+  outline: 3px solid royalblue;
+}
 /* -----------------HEADER--------------------- */
 
 .logo {
-font-family: var(--logo-font);
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-color: var(--accent-color);
-text-decoration: none;
-outline: 3px solid red;
-margin-right: 94px;
+  font-family: var(--logo-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--accent-color);
+  text-decoration: none;
+  margin-right: 94px;
+
+  outline: 3px solid red;
 }
 
 .logo-dark {
-color: var(--logo-text-color);
+  color: var(--logo-text-color);
 }
 
- .link {
-   text-decoration: none;
-   font-style: normal;
- }
+.link {
+  text-decoration: none;
+  font-style: normal;
+}
 
 .list {
-   list-style: none;
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
 }
 
 .navigation {
-   font-weight: 500;
-   line-height: 1.14;
-   letter-spacing: 0.02em;
-   color: var(--second-text-color);
-   outline: 3px solid red;
-   margin-right: 50px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
+  margin-right: 50px;
+
+  outline: 3px solid red;
 }
 
 .navigation.current {
-   color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .header-contacts {
-   font-weight: 500;
-   line-height: 1.14;
-   letter-spacing: 0.02em;
-   color: inherit;
-   outline: 3px solid red;
-   margin-left: 50px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: inherit;
+  margin-left: 50px;
+
+  outline: 3px solid red;
 }
 
 .navigation:hover,
 .navigation:focus,
 .header-contacts:hover,
 .header-contacts:focus {
-   color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* -----------------HERO--------------------- */
 
- .hero {
-   background-color: var(--dark-background-color);
-   padding: 200px 0;
+.hero {
+  background-color: var(--dark-background-color);
+  padding: 200px 0;
+  text-align: center;
 }
 
- .hero-title {
-   font-weight: 900;
-   font-size: 44px;
-   line-height: 1,36;
-   text-align: center;
-   letter-spacing: 0.06em;
-   text-transform: uppercase;
-   color: var(--light-text-color);
-   width: 696px;
-   margin: 0 auto 30px auto;
- }
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--light-text-color);
+  width: 696px;
+  margin: 0 auto 30px auto;
+
+  outline: 3px solid red;
+}
 
 .hero-button {
-    color: var(--light-text-color);
-    background: var(--accent-color);
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1,88;
-    letter-spacing: 0.06em;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    border-radius: 4px;
-    border: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    cursor: pointer;
-    margin: 0 auto;
-    padding: 10px 32px;
- }
+  color: var(--light-text-color);
+  background: var(--accent-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  padding: 10px 32px;
+  display: inline-block;
+}
 
- .hero-button:hover,
- .hero-button:focus,
- .hero-button:active {
-   background: var(--btn-accent-color);
- }
+.hero-button:hover,
+.hero-button:focus,
+.hero-button:active {
+  background: var(--btn-accent-color);
+}
 
- /* -----------------ADVANTAGES--------------------- */
+/* -----------------ADVANTAGES--------------------- */
 
- .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .advantages {
-   background-color: var(--light-background-color);
+  background-color: var(--light-background-color);
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .advantages-title {
-   font-weight: 700;
-   font-size: 14px;
-   line-height: 1.14;
-   text-transform: uppercase;
-   color: var(--second-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--second-text-color);
+  margin-bottom: 10px;
+
+ outline: 3px solid red;
 }
 
-/* .advantages-descriptions {}  */
+.advantages-descriptions {
+   width: 270px;
+} 
 
 /* -----------------WORK-------------------- */
 
 .work {
-background-color: var(--light-background-color);
+  background-color: var(--light-background-color);
+  padding-bottom: 94px;
 }
 
 .section-title {
-   font-weight: 700;
-   font-size: 36px;
-   line-height: 1.17;
-   text-align: center;
-   color: var(--second-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: var(--second-text-color);
+  margin-bottom: 50px;
+
+  outline: 3px solid red;
 }
 
 /* -----------------TEAM-------------------- */
 
 .team {
-   background-color: var(--semi-light-background-color);
+  background-color: var(--semi-light-background-color);
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .card {
-   background-color: var(--light-background-color);
+  background-color: var(--light-background-color);
+  padding-bottom: 30px;
 }
 
 .team-name {
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 1.19;
-   color: var(--second-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  color: var(--second-text-color);
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 .team-position {
-   font-size: 16px;
-   line-height: 1.19;
+  font-size: 16px;
+  line-height: 1.19;
 }
 
 /* -----------------FOOTER-------------------- */
 
 .footer {
-   background-color: var(--dark-background-color);
+  background-color: var(--dark-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .logo-light {
-   color: var(--light-text-color);
+  color: var(--light-text-color);
 }
 
 .adress {
-   color: var(--light-text-color);
+  color: var(--light-text-color);
 }
 
 .adress:hover,
 .adress:focus {
-   color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .footer-contacts {
-   color: var(--semi-light-text-color);
+  color: var(--semi-light-text-color);
 }
 
 .footer-contacts:hover,
 .footer-contacts:focus {
-   color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* ======================PORTFOLIO===================== */
 
 .button {
-   color: var(--second-text-color);
-   background-color: var(--semi-light-background-color);
-   font-family: inherit;
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 1.62;
-   letter-spacing: 0.03em;
-   text-align: center;
-   border-radius: 4px;
-   border: none;
-   cursor: pointer;
+  color: var(--second-text-color);
+  background-color: var(--semi-light-background-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  text-align: center;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  padding: 6px 22px;
 }
 
 .button:hover,
 .button:focus {
-   color: var(--light-text-color);
-   background-color: var(--accent-color);
-   border-radius: 4px;
-   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  color: var(--light-text-color);
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio .title {
-   font-weight: 700;
-   font-size: 18px;
-   line-height: 2;
-   letter-spacing: 0.06em;
-   color: var(--second-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--second-text-color);
 }
 
 .portfolio .filter-text {
-   font-size: 16px;
-   line-height: 1.88;
-   color: var(--main-text-color);
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--main-text-color);
 }
