--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,17 @@ img {
   display: block;
 }
 
+.link {
+  text-decoration: none;
+  font-style: normal;
+}
+
+.list {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -45,19 +56,12 @@ img {
   margin-left: auto;
   margin-right: auto;
   display: flex;
-
-  outline: 3px solid royalblue;
 }
 
-.link {
-  text-decoration: none;
-  font-style: normal;
-}
-  
-.list {
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
+.section {
+  background-color: var(--light-background-color);
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 /* -----------------HEADER--------------------- */
@@ -67,7 +71,6 @@ img {
   border-top: transparent;
   border-right: transparent;
   border-left: transparent;
-
 }
 
 .top > .container {
@@ -95,14 +98,11 @@ img {
   color: var(--accent-color);
   text-decoration: none;
   margin-right: 93px;
-
-  outline: 3px solid red;
 }
 
 .logo-dark {
   color: var(--logo-text-color);
 }
-
 
 .navigation {
   font-weight: 500;
@@ -112,9 +112,6 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
   display: block;
-  
-
-  outline: 3px solid red;
 }
 
 .navigation.current {
@@ -125,14 +122,11 @@ img {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  
+
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: inherit;
-  
-
-  outline: 3px solid red;
 }
 
 .navigation:hover,
@@ -159,8 +153,6 @@ img {
   color: var(--light-text-color);
   width: 696px;
   margin: 0 auto 30px auto;
-
-  outline: 3px solid red;
 }
 
 .hero-button {
@@ -200,15 +192,8 @@ img {
   overflow: hidden;
 }
 
-.advantages {
-  background-color: var(--light-background-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .advantages > .container {
   display: block;
-
 }
 
 .advantages-list {
@@ -216,15 +201,12 @@ img {
 }
 
 .advantages-item {
-  width: calc((100%-3*30px)/4);
+  width: calc((100%-3 * 30px) / 4);
 }
 
 .advantages-item:not(:last-child) {
   margin-right: 30px;
 }
-
-/* .advantages-item:(:nth-last-child(-n+3))  */
-
 
 .advantages-title {
   font-weight: 700;
@@ -233,8 +215,6 @@ img {
   text-transform: uppercase;
   color: var(--second-text-color);
   margin-bottom: 10px;
-
-  outline: 3px solid red;
 }
 
 .advantages-descriptions {
@@ -243,9 +223,8 @@ img {
 
 /* -----------------WORK-------------------- */
 
-.work {
-  background-color: var(--light-background-color);
-  padding-bottom: 94px;
+.section.work {
+  padding-top: 0;
 }
 
 .work > .container {
@@ -257,7 +236,7 @@ img {
 }
 
 .work-item:not(:last-child) {
-margin-right: 30px;
+  margin-right: 30px;
 }
 
 .section-title {
@@ -267,16 +246,12 @@ margin-right: 30px;
   text-align: center;
   color: var(--second-text-color);
   margin-bottom: 50px;
-
-  outline: 3px solid red;
 }
 
 /* -----------------TEAM-------------------- */
 
-.team {
+.section.team {
   background-color: var(--semi-light-background-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .team > .container {
@@ -290,7 +265,8 @@ margin-right: 30px;
 .card {
   background-color: var(--light-background-color);
   padding-bottom: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -357,9 +333,7 @@ margin-right: 30px;
 /* ======================PORTFOLIO===================== */
 
 .portfolio > .container {
-display: block;
-padding-top: 94px;
-padding-bottom: 94px;
+  display: block;
 }
 
 .filter {
@@ -368,11 +342,7 @@ padding-bottom: 94px;
   margin-bottom: 56px;
 }
 
-.filter > .item :not(:last-child) {
-  margin-right: 8px;
-}
-
-.filter>li :not(:last-child) {
+.filter > .item:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -404,7 +374,6 @@ padding-bottom: 94px;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-
 }
 
 .caption {
